<resources>
    <string name="app_name">TracNghiem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">High school</string>
    <string name="nav_header_subtitle">highschool@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_math">Math</string>
    <string name="menu_physics">Physics</string>
    <string name="menu_chemistry">Chemistry</string>
    <string name="menu_login">Login</string>
    <string name="menu_profile">Profile</string>
    <string name="facebook_app_id">506139497370677</string>
    <string name="fb_login_protocol_scheme">fb506139497370677</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>

</resources>